# lua-analyzer

./: .gitignore  Cargo.toml  README.md  bors.toml  crates.js  search-index.js  settings.html  source-files.js
crates/base_db/: Cargo.toml
crates/base_db/src/: change.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: ast_id_map.rs  body.rs  expr.rs  ids.rs  item_tree.rs  lib.rs  name.rs  semantics.rs  stmt.rs  with_body.rs
crates/hir/src/body/: lower.rs
crates/hir/src/item_tree/: lower.rs
crates/ide_db/: Cargo.toml
crates/ide_db/src/: lib.rs  line_index.rs
crates/lua-analyzer/: Cargo.toml
crates/lua-analyzer/src/: caps.rs  config.rs  diagnostics.rs  dispatch.rs  from_proto.rs  global_state.rs  handlers.rs  lib.rs  lsp_utils.rs  main.rs  main_loop.rs  reload.rs  thread_pool.rs  to_proto.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lexer.rs  lib.rs  parse_error.rs  parser.rs  syntax_kind.rs  token_set.rs
crates/parser/src/grammar/: expressions.rs  statements.rs
crates/parser/src/snapshots/: parser__lexer__tests__assignment.snap  parser__lexer__tests__concat.snap  parser__lexer__tests__delimiters.snap  parser__lexer__tests__double_colon.snap  parser__lexer__tests__empty.snap  parser__lexer__tests__first_token_test.snap  parser__lexer__tests__hex_numbers.snap  parser__lexer__tests__idents.snap  parser__lexer__tests__keywords.snap  parser__lexer__tests__math.snap  parser__lexer__tests__multi_string.snap  parser__lexer__tests__multi_string_fail-2.snap  parser__lexer__tests__multi_string_fail-3.snap  parser__lexer__tests__multi_string_fail.snap  parser__lexer__tests__multi_string_with_equals.snap  parser__lexer__tests__multiline_equals.snap  parser__lexer__tests__multiline_strings.snap  parser__lexer__tests__numbers.snap  parser__lexer__tests__operators.snap  parser__lexer__tests__punct.snap  parser__lexer__tests__strings.snap  parser__lexer__tests__vararg.snap
crates/parser/src/syntax_kind/: generated.rs
crates/syntax/: Cargo.toml
crates/syntax/fuzz/: Cargo.toml
crates/syntax/fuzz/fuzz_targets/: lua_lexer.rs  parser.rs
crates/syntax/luajit2-test-suite/ffi/: ffi_enum.lua  ffi_err.lua
crates/syntax/luajit2-test-suite/misc/: compare.lua  libfuncs.lua  lightud.lua  stackov.lua  table_chain_bug_LuaJIT_494.lua
crates/syntax/luajit2-test-suite/sysdep/: ffi_include_std.lua
crates/syntax/luajit2-test-suite/unportable/: math_special.lua
crates/syntax/snapshots/lexer/err/: multiline_strings.lua  multiline_strings.snap  string_newline.lua  string_newline.snap  string_unclosed.lua  string_unclosed.snap
crates/syntax/snapshots/lexer/ok/: assignment.lua  assignment.snap  bracket_confusing.lua  bracket_confusing.snap  bracket_with_escapes.lua  bracket_with_escapes.snap  comparisons.lua  comparisons.snap  concat.snap  delimiters.lua  delimiters.snap  double_colon.lua  double_colon.snap  empty.snap  hex_numbers.lua  hex_numbers.snap  idents.lua  idents.snap  keywords.lua  keywords.snap  math.lua  math.snap  multiline_comment.lua  multiline_comment.snap  multiline_equals.lua  multiline_equals.snap  multiline_strings.lua  multiline_strings.snap  numbers.lua  numbers.snap  operators.lua  operators.snap  punct.lua  punct.snap  strings.lua  strings.snap  vararg.lua  vararg.snap
crates/syntax/snapshots/parser/err/: can_call.lua  can_call.snap  cannot_call_literal.snap  function_no_ident.snap  invalid_escape.snap  local_assign.lua  local_assign.snap  missing_paren.snap  multi_expr_stmt.lua  multi_expr_stmt.snap  unknown_symbol.lua  unknown_symbol.snap  vararg_wrong_position.lua  vararg_wrong_position.snap
crates/syntax/snapshots/parser/ok/: array_table_expr.lua  array_table_expr.snap  asserts.snap  assign.lua  assign.snap  assign_lhs_expr.lua  assign_lhs_expr.snap  both_table_expr.snap  break_stmt.lua  break_stmt.snap  call_with_vararg.lua  call_with_vararg.snap  comment_on_thing.lua  comment_on_thing.snap  comments.lua  comments.snap  do_block.lua  do_block.snap  dot_expr.snap  function_call.snap  function_call_multi.lua  function_call_multi.snap  function_def.lua  function_def.snap  function_literal.snap  generic_for_stmt.lua  (+49 more)
crates/syntax/src/: accept.rs  ast.rs  fuzz.rs  lexer.rs  lib.rs  lua_lexer.rs  parsing.rs  ptr.rs  syntax_node.rs  tests.rs  validation.rs
crates/syntax/src/ast/: expr_ext.rs  generated.rs  node_ext.rs  stmt_ext.rs
crates/syntax/src/lexer/: error.rs  source.rs
crates/syntax/src/parsing/: reparsing.rs  text_token_source.rs  text_tree_sink.rs
crates/syntax/src/snapshots/: syntax__tests__nothing.snap  syntax__tests__syntax@assign.snap
crates/syntax/tests/: api.rs  luajit2-test-suite.rs  stack_overflow.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: handle.rs  lib.rs  loader.rs  path_interner.rs
lib/binding_powers/: Cargo.toml
lib/binding_powers/src/: lib.rs
xtask/: Cargo.toml  all.html  fn.main.html  index.html  sidebar-items.js
xtask/assets/: ast_src.toml  lua.ungram
xtask/codegen/: index.html  sidebar-items.js
xtask/codegen/gen_syntax/: fn.gen_nodes.html  fn.gen_syntax_kinds.html  fn.gen_tokens.html  fn.run.html  index.html  sidebar-items.js
xtask/codegen/gen_syntax/ast_src/: enum.Cardinality.html  enum.Field.html  fn.label_is_manually_implemented.html  fn.lower.html  fn.lower_comma_list.html  fn.lower_enum.html  fn.lower_rule.html  fn.node_is_manually_implemented.html  fn.pluralize.html  index.html  sidebar-items.js  struct.AstEnumSrc.html  struct.AstNodeSrc.html  struct.AstSrc.html
xtask/codegen/gen_syntax/kinds_src/: index.html  sidebar-items.js  struct.KindsSrc.html  struct.PunctMap.html
xtask/flags/: enum.XtaskCmd.html  index.html  sidebar-items.js  struct.Codegen.html  struct.FuzzTests.html  struct.Help.html  struct.Xtask.html
xtask/fuzz_tests/: index.html
xtask/src/: codegen.rs  flags.rs  fuzz_tests.rs  main.rs  utils.rs
xtask/src/codegen/: ast_src.rs  kinds_src.rs
xtask/src/codegen/gen_syntax/: ast_src.rs  kinds_src.rs  mod.rs
xtask/utils/: constant.PREAMBLE.html  fn.project_root.html  fn.reformat.html  fn.update.html  fn.xtask_root.html  index.html  sidebar-items.js
(+596 files in other folders)
