[package]
name = "xtask"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
heck = "0.3.2"
proc-macro2 = "1.0.24"
quote = "1.0.9"
serde = { version = "1.0.124", features = ["derive"] }
syn = "1.0.63"
toml = "0.5.8"
ungrammar = "1.12.1"
xshell = "0.1.9"
