[package]
name = "xtask"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.40"
flate2 = "1.0.20"
heck = "0.3.2"
proc-macro2 = "1.0.79"
quote = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
syn = "1.0.72"
toml = "0.5.8"
ungrammar = "1.13.0"
xflags = "0.2.1"
xshell = "0.1.11"
