[package]
name = "base_db"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.16.0"

vfs = { path = "../vfs" }
syntax = { path = "../syntax" }
stdx = { path = "../stdx" }
