[package]
name = "base_db"
version = "0.0.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.16.1"

vfs = { path = "../vfs", version = "0.0.0" }
syntax = { path = "../syntax", version = "0.0.0" }
stdx = { path = "../stdx" , version = "0.0.0" }
