[package]
name = "hir"
version = "0.0.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.2.0"
ordered-float = "2.2.0"
rustc-hash = "1.1.0"
smallvec = "1.6.1"
smol_str = "0.2.1"

base_db = { path = "../base_db", version = "0.0.0" }
syntax = { path = "../syntax", version = "0.0.0" }
