[package]
name = "ide_db"
version = "0.0.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_db = { path = "../base_db" }
rustc-hash = "1.1.0"

syntax = { path = "../syntax", version = "0.0.0" }
