[package]
name = "lua-analyzer"
version = "0.0.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# [profile.release]
# debug = true

[dependencies]
anyhow = "1.0.40"
crossbeam-channel = "0.5.1"
directories-next = "2.0.0"
log = "0.4.14"
lsp-server = "0.5.1"
lsp-types = "0.89.0"
parking_lot = "0.11.1"
rayon = "1.5.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_path_to_error = "0.1.4"
simplelog = "0.10.0"
itertools = "0.10.0"

vfs = { path = "../vfs", version = "0.0.0" }
ide = { path = "../ide", version = "0.0.0" }
ide_db = { path = "../ide_db", version = "0.0.0" }
stdx = { path = "../stdx", version = "0.0.0" }
syntax = { path = "../syntax", version = "0.0.0" }
