[package]
name = "parser"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
either = "1.6.1"
itertools = "0.10.0"
rowan = "0.12.6"
thiserror = "1.0.24"

[dev-dependencies]
insta = "1.7.0"
