[package]
name = "parser"
version = "0.0.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
itertools = "0.10.0"
rowan = "0.12.6"
thiserror = "1.0.24"

binding_powers = { version = "0.1.0" }

[dev-dependencies]
insta = "1.7.0"
