[package]
name = "syntax"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
parser = { path = "../parser" }
rowan = "0.12.6"

[dev-dependencies]
glob = "0.3.0"
insta = { version = "1.7.0", features = ["glob"] }
rayon = "1.5.0"
