[package]
name = "syntax"
version = "0.0.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"
description = "lossless parser for the lua language"
license = "MIT/Apache-2.0"
repository = "https://github.com/oberblastmeister/lua-analyzer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rowan = "0.12.6"
thiserror = "1.0.24"

parser = { path = "../parser", version = "0.0.0" }
stdx = { path = "../stdx", version = "0.0.0" }
text_edit = { path = "../text_edit", version = "0.0.0" }
test_utils = { path = "../test_utils", version = "0.0.0" }

[dev-dependencies]
glob = "0.3.0"
insta = { version = "1.7.0", features = ["glob"] }
rayon = "1.5.0"
